--- a/index.css
+++ b/index.css
@@ -1,135 +1,158 @@
-/* /* http://meyerweb.com/eric/tools/css/reset/ 
+/* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
 */
 
-/*
-
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	/* border: 0; */
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-
-/*
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
-  display: block;
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
 }
 body {
-  line-height: 1;
+	line-height: 1;
 }
-ol,
-ul {
-  list-style: none;
+ol, ul {
+	list-style: none;
 }
-blockquote,
-q {
-  quotes: none;
+blockquote, q {
+	quotes: none;
 }
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-  content: "";
-  content: none;
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
 }
 table {
-  border-collapse: collapse;
-  border-spacing: 0;
+	border-collapse: collapse;
+	border-spacing: 0;
 }
 
-*/
+
+
+*{
+    box-sizing: border-box;
+    border: 1px solid grey;
+    max-width: 100%;
+}
+
+html{
+    font-size: 62.5%;
+}
+
+body{
+    font-size: 1.6rem;
+    line-height: 1.5;
+    font-family: 'Roboto Mono', monospace;
+}
+
+h1{
+    font-size: 7rem;
+    font-family: 'Chelsea Market', cursive;
+}
+
+section{
+    padding: 5% 0;
+    width: 95%;
+    margin: 0 auto;
+}
+
+nav{
+    padding: 4% 0;
+}
+
+nav a{
+    display: inline-block;
+    padding: 2% 0;
+    width: 20%;
+    text-align: center;
+    border-radius: 10px;
+    color: white;
+    text-decoration: none;
+}
+
+.leftbox{
+    background-color: #FF764E;
+    margin-left: 5%;
+}
+
+.middlebox{
+    background-color: #5ED3EB;
+    margin: 0 14%;
+}
+
+.rightbox{
+    background-color: #FFCD69;
+    margin-right: 5%;
+}
+
+.top{
+    position: relative;
+}
+
+.text{
+    display: inline-block;
+    width: 45%;
+    margin-left: 10%;
+    text-align: center;
+    line-height: 2;
+    position: absolute;
+    top: 300px;
+}
+
+.image{
+    display: inline-block;
+    width: 35%;
+}
+
+.image img{
+    border-radius: 50%;
+}
+
+.block{
+    background-color: #DDB9A3;
+    color: white;
+    padding: 2%;
+    text-align: center;
+}
+
+.information div{
+    width: 25%;
+    margin: 3% auto;
+}
+
+.bold{
+    font-weight: bold;
+}
+
+.background-image{
+    background-image: url('assets/footer_img.jpg');
+    height: 30vh;
+    width: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: top center;
+}
+
+footer{
+    background-color: #F9E7DC;
+}
